--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "espi-fitness",
   "version": "0.1.0",
+  "homepage": "https://espifit.justinmcclain.net",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -9,7 +10,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.89.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
